<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:onClick="ClearFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="ZeroFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete" />

    <Button
        android:onClick="EqualFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:id="@+id/buttonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:onClick="OneFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="TwoFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toStartOf="@+id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonOne" />

    <Button
        android:onClick="ThreeFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:onClick="FourFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="FiveFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toStartOf="@+id/buttonSix"
        app:layout_constraintStart_toEndOf="@+id/buttonFour" />

    <Button
        android:onClick="SixFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:onClick="SevenFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="EightFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintEnd_toStartOf="@+id/buttonNine"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven" />

    <Button
        android:onClick="NineFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:onClick="PlusFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Plus"
        app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="MinusFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Minus"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus" />

    <Button
        android:onClick="DivideFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Divide"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus" />

    <Button
        android:onClick="MultiplyFun"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Multiply"
        app:layout_constraintBottom_toTopOf="@+id/buttonNine"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:textSize="24sp"
        android:textColor="@android:color/holo_green_dark"
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>